force parallelStream usage