@@ -2,7 +2,6 @@ package com.agutsul.chess.rule.impact.fork;
 
 import static com.agutsul.chess.rule.impact.PieceAttackImpactFactory.createAttackImpact;
 import static java.util.Collections.unmodifiableCollection;
-import static java.util.stream.Collectors.toList;
 
 import java.util.Collection;
 import java.util.Objects;
@@ -46,13 +45,13 @@ public class PieceForkPositionImpactRule<COLOR1 extends Color,
 
         @SuppressWarnings("unchecked")
         var impacts = Stream.of(next)
-                .flatMap(Collection::stream)
+                .flatMap(Collection::parallelStream)
                 .map(calculated -> board.getPiece((Position) calculated))
                 .flatMap(Optional::stream)
                 .filter(attackedPiece -> !Objects.equals(attackedPiece.getColor(), piece.getColor()))
                 .map(attackedPiece -> createAttackImpact(piece, attackedPiece))
                 .map(impact -> (AbstractPieceAttackImpact<COLOR1,COLOR2,ATTACKER,ATTACKED>) impact)
-                .collect(toList());
+                .toList();
 
         return impacts;
     }
